Fixed duplicate navigation menus on tablets and phones and dark on dark when hovering over navigation menu items in the collapsed version of the navigation menu.

--- a/theme/bootstrapbase/less/bootstrap/responsive-navbar.less
+++ b/theme/bootstrapbase/less/bootstrap/responsive-navbar.less
@@ -94,7 +94,7 @@
   .navbar-inverse .nav-collapse .nav > li > a:focus,
   .navbar-inverse .nav-collapse .dropdown-menu a:hover,
   .navbar-inverse .nav-collapse .dropdown-menu a:focus {
-    background-color: @navbarInverseBackground;
+    background-color: @navbarBackground;
   }
   // Buttons in the navbar
   .nav-collapse.in .btn-group {
